@@ -220,6 +220,14 @@ depend on the level of the mobs in the room the thief \
 is trying to sneak into, and on the thiefs stealth \
 expertise.
 
+AWAIT_SHIP=SKILL_AWAITSHIP
+AWAITSHIP=SKILL_AWAITSHIP
+SKILL_AWAITSHIP=<ABILITY>\
+Usage    : AWAITSHIP\n\r\
+Example  : awaitship\n\r\
+While standing on a shore, this skill will cause the sailors nearest big sailing ship \
+to be sailed to where the sailor is.
+
 THIEF_AVOIDTRAPS=AVOID_TRAPS
 AVOID_TRAPS=<ABILITY>\
 Example  : \n\r\
