@@ -40,7 +40,8 @@
   39. New Thief/Sailor Skills: Dead Reckoning, Sea Navigation, Scuttle, Fence Loot, Pet Spy
   40. New Thief/Sailor Skills: Pirate Familiar, Pub Contacts, Combat Repairs, Foul Weather Sailing
   41. New Thief/Sailor Skills: Pay Off, Pet Steal, Merchant Flag, Pieces of Eight, Articles
-  42. New Thief/Sailor Skills: Ramming Speed, Smuggler's Hold, Hide Ship, Intercept Ship
+  42. New Thief/Sailor Skills: Ramming Speed, Smuggler's Hold, Hide Ship, Intercept Ship, Await Ship
+  
 # Build 5.9.3 Released 05/08/2016
    1. Follower behavior now has a few more options.
    2. STAT [MOBNAME] will now give full editor stats also, and 
